ingress/all/kubernetes-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    ingress.cilium.io/tls-passthrough: enabled
    ingress.cilium.io/force-https: enabled
spec:
  ingressClassName: cilium
  rules:
  - host: kubernetes-dashboard.k8s.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard-kong-proxy
            port:
              number: 443
